# Speech-to-Text-Converter

./: 0099.py  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  __init__.py  app.py  config.json  create_examples.py  prepare_github.py  pyproject.toml  requirements.txt  setup.py  transcriptions.db
.github/workflows/: ci.yml
tests/: test_converter.py
